Revision history for Perl extension ExtUtils::ModuleMaker.

0.3603 July 23, 2005
        - Intermediate version not released to CPAN.  Starting to move
          standard copy to Defaults::standard_text(). Realized that
block_final_one() was making no use of $module, so eliminated $module
from sub's argument list.

0.3602 July 22, 2005
        - Intermediate version not released to CPAN.  After much sweat,
          moved sub default_values() to new package
lib/ExtUtils/ModuleMaker/Defaults.pm.
        - Created sub failsafe() as testing subroutine for
          t/02_bad_constructor.t.
        - Corrected one misspecified test in t/03_quick.t.

0.36 July 18, 2005
        - Corrected error pointed out by CPAN tester Scott R. Godin:
          IO::Capture and subclasses were omitted from MANIFEST, 
          causing failure in t/11_miscargs.t.
        - Added additional command-line option '-q' to suppress sub new() 
          in .pm file created by modulemaker.  Added tests to t/09_mmkr.t 
          to test suppression of POD and suppression of sub new() in 
          .pm file created by modulemaker.  Along the way, wrote 
          additional testing subroutines and added them to 
          t/testlib/_Auxiliary.pm:
               exported:  check_pm_file make_compact
               not exported:  pod_present constructor_present
        - Typographic cleanup of what modulemaker prints to STDOUT for 
          Directives menu (mistake caused by my wrap settings in vi).
        - Commented out SecondStyles.pm so it will no longer be bundled 
          via make dist and no longer be uploaded to CPAN.

0.35 July 17, 2005
	- Removed support for Perl 4 style module names (e.g., D'oh).
	- Added many tests, including tests for the modulemaker utility
	  in non-interactive mode.
	- Extensive refactoring, including extraction of most variable 
          and subroutine declarations from modulemaker utility and 
          placed them in lib/ExtUtils/ModuleMaker/Interactive.pm.  