@@ -4,7 +4,9 @@ Revision history for Perl extension ExtUtils::ModuleMaker.
         - Intermediate version not released to CPAN.  Starting to move
           standard copy to Defaults::standard_text(). Realized that
 block_final_one() was making no use of $module, so eliminated $module
-from sub's argument list.
+from sub's argument list.  Similarly, realized that block_new_method()
+was making no use of $module, so eliminated it from the sub's argument
+list.
 
 0.3602 July 22, 2005
         - Intermediate version not released to CPAN.  After much sweat,
